<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.wasltec.backpack.activities.Details2Activity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/appbar_padding_top"
        android:theme="@style/AppTheme.PopupOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_weight="1"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:titleTextColor="#000">

        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabSelectedTextColor="#9B9B9B"

            app:tabTextColor="#9B9B9B">

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/individual_txt" />

            <android.support.design.widget.TabItem
                android:id="@+id/tabItem2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/group_trip_txt" />

        </android.support.design.widget.TabLayout>
    </android.support.design.widget.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <android.support.v4.view.ViewPager
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_above="@id/card"
            android:layout_alignParentTop="true" />

        <android.support.v7.widget.CardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_50sdp"
            android:layout_alignParentBottom="true"
            app:cardElevation="0dp"
            app:cardMaxElevation="0dp"


            >

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorPrimaryDark"

                >


                <android.support.v7.widget.CardView
                    android:id="@+id/card2"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="@dimen/_5sdp"
                    android:layout_marginStart="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_5sdp"

                    app:cardElevation="0dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:paddingEnd="@dimen/_5sdp"
                        android:paddingStart="@dimen/_5sdp"
                        android:weightSum="2">


                        <TextView
                            android:id="@+id/item_price2"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:textSize="@dimen/_12sdp"
                            android:layout_weight="1"
                            android:text="@string/dummy_price"
                            android:textColor="#FF5B4B"
                            android:textStyle="bold"

                            />

                        <TextView
                            android:id="@+id/counter"
                            android:layout_width="wrap_content"
                            android:layout_height="0dp"
                            android:layout_weight="1"
                            android:textSize="@dimen/_10sdp"
                            android:text="@string/dummy_count"
                            android:textColor="#FF5B4B" />

                    </LinearLayout>
                </android.support.v7.widget.CardView>

                <Button
                    android:id="@+id/Confirm_btn"
                    android:layout_width="@dimen/_150sdp"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/_25sdp"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:background="@android:color/transparent"
                    android:paddingEnd="@dimen/_20sdp"
                    android:paddingStart="@dimen/_20sdp"
                    android:text="@string/accept_btn"
                    android:textSize="24dp"
                    android:textColor="#DEFFFFFF"
                    android:textStyle="bold"

                    />

            </RelativeLayout>

        </android.support.v7.widget.CardView>
    </RelativeLayout>
</android.support.design.widget.CoordinatorLayout>
