<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.TimesFragment">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:layout_alignParentTop="true"
        app:navigationIcon="@drawable/ic_close2"
        app:popupTheme="@style/AppTheme.PopupOverlay"

        app:title="Times Available"
        app:titleTextColor="@color/bg_text_color" />

    <TextView
        android:id="@+id/date_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/toolbar"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_16sdp"
        android:layout_marginStart="@dimen/_16sdp"
        android:text="TextView"
        android:textColor="@color/gray"
        android:textSize="@dimen/text_large" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/timesList"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_above="@id/line3"
        android:layout_below="@id/date_txt">

    </android.support.v7.widget.RecyclerView>

    <View
        android:id="@+id/line3"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_alignTop="@+id/item_price"
        android:layout_marginTop="@dimen/_2sdp"
        android:background="#444" />


    <TextView
        android:id="@+id/item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/counter"
        android:layout_alignParentStart="true"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:text="@string/dummy_price"
        android:textColor="@color/colorPrimary"
        android:textSize="@dimen/_12ssp"

        />

    <TextView
        android:id="@+id/counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_25sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:text="@string/dummy_count"
        android:textColor="@color/colorPrimary" />

    <Button
        android:id="@+id/save_btn"
        android:layout_width="@dimen/_150sdp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_below="@id/line3"
        android:layout_marginBottom="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_5sdp"
        android:background="@drawable/filter_btn"
        android:padding="@dimen/_10sdp"
        android:paddingEnd="@dimen/_20sdp"
        android:paddingStart="@dimen/_20sdp"
        android:text="@string/save_btn"
        android:textColor="#fff"

        />

</RelativeLayout>